[package]
name = "leaflet"
version = "0.1.2"
authors = ["Nathan Duncan <natefduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
csv = "1.1.6"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.12.0"

